--- a/gpt.ipynb
+++ b/gpt.ipynb
@@ -2,17 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "\n",
+    "torch.set_default_device(\n",
+    "    \"cuda\" if torch.cuda.is_available()\n",
+    "    else \"mps\" if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "tensor([[6109, 3626, 6100,  345],\n",
-      "        [6109, 1110, 6622,  257]])\n"
+      "        [6109, 1110, 6622,  257]], device='cuda:0')\n"
      ]
     }
    ],
@@ -132,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,25 +146,25 @@
      "output_type": "stream",
      "text": [
       "Output shape:  torch.Size([2, 4, 50257])\n",
-      "tensor([[[-1.2034,  0.3201, -0.7130,  ..., -1.5548, -0.2390, -0.4667],\n",
-      "         [-0.1192,  0.4539, -0.4432,  ...,  0.2392,  1.3469,  1.2430],\n",
-      "         [ 0.5307,  1.6720, -0.4695,  ...,  1.1966,  0.0111,  0.5835],\n",
-      "         [ 0.0139,  1.6754, -0.3388,  ...,  1.1586, -0.0435, -1.0400]],\n",
+      "tensor([[[ 0.3227, -0.1641,  0.9602,  ...,  0.4737, -2.4280,  0.5969],\n",
+      "         [ 0.9188,  1.1286,  0.0131,  ..., -0.6804, -0.2360,  0.5531],\n",
+      "         [-0.7444,  0.1130, -0.6241,  ..., -0.5063, -0.7382, -0.1368],\n",
+      "         [ 1.2785, -0.0472, -0.1038,  ..., -0.0546, -0.6380, -0.0660]],\n",
       "\n",
-      "        [[-1.0908,  0.1798, -0.9484,  ..., -1.6047,  0.2439, -0.4530],\n",
-      "         [-0.7860,  0.5581, -0.0610,  ...,  0.4835, -0.0077,  1.6621],\n",
-      "         [ 0.3567,  1.2698, -0.6398,  ..., -0.0162, -0.1296,  0.3717],\n",
-      "         [-0.2407, -0.7349, -0.5102,  ...,  2.0057, -0.3694,  0.1814]]],\n",
-      "       grad_fn=<UnsafeViewBackward0>)\n"
+      "        [[ 0.1904, -0.2022,  1.0400,  ...,  0.8918, -1.6030,  0.9570],\n",
+      "         [-0.2194,  1.0844, -0.7797,  ..., -0.2095, -1.9934,  1.1164],\n",
+      "         [-0.2034,  1.0729, -0.5321,  ..., -1.7061,  1.3856, -1.2117],\n",
+      "         [ 0.9472, -0.2335, -1.2444,  ..., -1.4038, -0.8587, -0.5734]]],\n",
+      "       device='cuda:0', grad_fn=<UnsafeViewBackward0>)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "b' Trident'"
+       "b' rant'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,15 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1115,  0.1204, -0.3696, -0.2404, -1.1969],\n",
-      "        [ 0.2093, -0.9724, -0.7550,  0.3239, -0.1085]])\n",
       "tensor([[0.2260, 0.3470, 0.0000, 0.2216, 0.0000, 0.0000],\n",
       "        [0.2133, 0.2394, 0.0000, 0.5198, 0.3297, 0.0000]],\n",
       "       grad_fn=<ReluBackward0>)\n"
@@ -194,7 +198,7 @@
     "batch_example = torch.randn(2, 5)\n",
     "layer = nn.Sequential(nn.Linear(5, 6), nn.ReLU())\n",
     "out = layer(batch_example)\n",
-    "print(batch_example)\n",
+    "# print(batch_example)\n",
     "print(out)"
    ]
   }
