--- a/gpt.ipynb
+++ b/gpt.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "torch.set_default_device(\n",
-    "    \"cuda\" if torch.cuda.is_available()\n",
-    "    else \"mps\" if torch.backends.mps.is_available()\n",
-    "    else \"cpu\"\n",
-    ")"
+    "# torch.set_default_device(\n",
+    "#     \"cuda\" if torch.cuda.is_available()\n",
+    "#     else \"mps\" if torch.backends.mps.is_available()\n",
+    "#     else \"cpu\"\n",
+    "# )"
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "tensor([[6109, 3626, 6100,  345],\n",
-      "        [6109, 1110, 6622,  257]], device='cuda:0')\n"
+      "        [6109, 1110, 6622,  257]])\n"
      ]
     }
    ],
@@ -146,22 +146,22 @@
      "output_type": "stream",
      "text": [
       "Output shape:  torch.Size([2, 4, 50257])\n",
-      "tensor([[[ 0.3227, -0.1641,  0.9602,  ...,  0.4737, -2.4280,  0.5969],\n",
-      "         [ 0.9188,  1.1286,  0.0131,  ..., -0.6804, -0.2360,  0.5531],\n",
-      "         [-0.7444,  0.1130, -0.6241,  ..., -0.5063, -0.7382, -0.1368],\n",
-      "         [ 1.2785, -0.0472, -0.1038,  ..., -0.0546, -0.6380, -0.0660]],\n",
+      "tensor([[[-1.2034,  0.3201, -0.7130,  ..., -1.5548, -0.2390, -0.4667],\n",
+      "         [-0.1192,  0.4539, -0.4432,  ...,  0.2392,  1.3469,  1.2430],\n",
+      "         [ 0.5307,  1.6720, -0.4695,  ...,  1.1966,  0.0111,  0.5835],\n",
+      "         [ 0.0139,  1.6754, -0.3388,  ...,  1.1586, -0.0435, -1.0400]],\n",
       "\n",
-      "        [[ 0.1904, -0.2022,  1.0400,  ...,  0.8918, -1.6030,  0.9570],\n",
-      "         [-0.2194,  1.0844, -0.7797,  ..., -0.2095, -1.9934,  1.1164],\n",
-      "         [-0.2034,  1.0729, -0.5321,  ..., -1.7061,  1.3856, -1.2117],\n",
-      "         [ 0.9472, -0.2335, -1.2444,  ..., -1.4038, -0.8587, -0.5734]]],\n",
-      "       device='cuda:0', grad_fn=<UnsafeViewBackward0>)\n"
+      "        [[-1.0908,  0.1798, -0.9484,  ..., -1.6047,  0.2439, -0.4530],\n",
+      "         [-0.7860,  0.5581, -0.0610,  ...,  0.4835, -0.0077,  1.6621],\n",
+      "         [ 0.3567,  1.2698, -0.6398,  ..., -0.0162, -0.1296,  0.3717],\n",
+      "         [-0.2407, -0.7349, -0.5102,  ...,  2.0057, -0.3694,  0.1814]]],\n",
+      "       grad_fn=<UnsafeViewBackward0>)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "b' rant'"
+       "b' Trident'"
       ]
      },
      "execution_count": 6,
@@ -180,13 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tensor([[-0.1115,  0.1204, -0.3696, -0.2404, -1.1969],\n",
+      "        [ 0.2093, -0.9724, -0.7550,  0.3239, -0.1085]]) \n",
+      "\n",
       "tensor([[0.2260, 0.3470, 0.0000, 0.2216, 0.0000, 0.0000],\n",
       "        [0.2133, 0.2394, 0.0000, 0.5198, 0.3297, 0.0000]],\n",
       "       grad_fn=<ReluBackward0>)\n"
@@ -195,11 +198,80 @@
    ],
    "source": [
     "torch.manual_seed(123)\n",
+    "\n",
     "batch_example = torch.randn(2, 5)\n",
+    "print(batch_example, \"\\n\")\n",
+    "\n",
     "layer = nn.Sequential(nn.Linear(5, 6), nn.ReLU())\n",
     "out = layer(batch_example)\n",
-    "# print(batch_example)\n",
     "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:\n",
+      " tensor([[0.1324],\n",
+      "        [0.2170]], grad_fn=<MeanBackward1>)\n",
+      "Variance:\n",
+      " tensor([[0.0231],\n",
+      "        [0.0398]], grad_fn=<VarBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = out.mean(dim=-1, keepdim=True)\n",
+    "var = out.var(dim=-1, keepdim=True)\n",
+    "print(\"Mean:\\n\", mean)\n",
+    "print(\"Variance:\\n\", var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized layer outputs:\n",
+      " tensor([[ 0.6159,  1.4126, -0.8719,  0.5872, -0.8719, -0.8719],\n",
+      "        [-0.0189,  0.1121, -1.0876,  1.5173,  0.5647, -1.0876]],\n",
+      "       grad_fn=<DivBackward0>)\n",
+      "Mean:\n",
+      " tensor([[-5.9605e-08],\n",
+      "        [ 1.9868e-08]], grad_fn=<MeanBackward1>)\n",
+      "Variance:\n",
+      " tensor([[1.0000],\n",
+      "        [1.0000]], grad_fn=<VarBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_norm = (out - mean) / var.sqrt()\n",
+    "mean = out_norm.mean(dim=-1, keepdim=True)\n",
+    "var = out_norm.var(dim=-1, keepdim=True)\n",
+    "print(\"Normalized layer outputs:\\n\", out_norm)\n",
+    "print(\"Mean:\\n\", mean)\n",
+    "print(\"Variance:\\n\", var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.set_printoptions(sci_mode=False)\n",
+    "print(\"Mean:\\n\", mean)\n",
+    "print(\"Variance:\\n\", var)"
    ]
   }
  ],
